src/components/List/taskView.module.css
.backdrop {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.37);
  z-index: 1;
  animation: appearance 1s;
}

.outter {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 2;
  width: 50%;
}

.inner {
  position: relative;
  background-color: rgb(238, 238, 238);
  max-height: 20rem;
  border-radius: 10px;
  border: solid 1px black;
  padding: 1rem 2rem;
  text-align: center;
  animation: appearance 1s;
}

h3 {
  word-break: break-word;
}

.date {
  text-align: left;
  margin-bottom: 1rem;
  font-style: italic;
}
.description {
  text-align: left;
  min-height: 5rem;
  margin-top: 1rem;
  word-break: break-word;
}
.descriptionEdit {
  font-family: inherit;
  display: block;
  width: 100%;
  text-align: left;
  min-height: 5rem;
  margin-top: 1rem;
  word-break: break-word;
}
.wrong-edit {
  border: solid 1px rgb(230, 2, 2);
  background-color: rgba(255, 0, 0, 0.281);
}

.btn {
  height: 1.5rem;
  width: 1.5rem;
  padding: 0;
  border: none;
  position: absolute;
  top: 0.8rem;
  right: 2rem;
}

@keyframes appearance {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@media (max-width: 600px) {
  .btn {
    height: 2rem;
    width: 2rem;
  }
}

